set(GAME_SRC
src/Game.cpp
src/GameScreenController.cpp
src/GameScreenController.h
src/GameSystem.cpp
src/GameSystem.h
src/LoadScreenController.cpp
src/LoadScreenController.h
src/ogactor.cpp
src/ogactor.h
src/ogactorairbot.cpp
src/ogactorairbot.h
src/ogactorbonus.cpp
src/ogactorbonus.h
src/ogactorbot.cpp
src/ogactorbot.h
src/ogactorbullet.cpp
src/ogactorbullet.h
src/ogactorgaussray.cpp
src/ogactorgaussray.h
src/ogactorlandbot.cpp
src/ogactorlandbot.h
src/ogactormanager.cpp
src/ogactormanager.h
src/ogactormissile.cpp
src/ogactormissile.h
src/ogactorparamsmgr.cpp
src/ogactorparamsmgr.h
src/ogactorplasmamissile.cpp
src/ogactorplasmamissile.h
src/ogactorplayer.cpp
src/ogactorplayer.h
src/ogactorstatic.cpp
src/ogactorstatic.h
src/ogairphysicalobject.cpp
src/ogairphysicalobject.h
src/ogappsettings.cpp
src/ogappsettings.h
src/ogbakedanimation.cpp
src/ogbakedanimation.h
src/ogbonusphysicalobject.cpp
src/ogbonusphysicalobject.h
src/ogbotfallingworker.cpp
src/ogbotfallingworker.h
src/ogbotflightworker.cpp
src/ogbotflightworker.h
src/ogfinishlevelworker.cpp
src/ogfinishlevelworker.h
src/oggamesequence.cpp
src/oggamesequence.h
src/ogguibonusbar.cpp
src/ogguibonusbar.h
src/ogguibutton.cpp
src/ogguibutton.h
src/ogguilifebar.cpp
src/ogguilifebar.h
src/ogguiweaponpanel.cpp
src/ogguiweaponpanel.h
src/oglandphysicalobject.cpp
src/oglandphysicalobject.h
src/oglevel.cpp
src/oglevel.h
src/oglevelmanager.cpp
src/oglevelmanager.h
src/ogmissileflightworker.cpp
src/ogmissileflightworker.h
src/ogmissilephysicalobject.cpp
src/ogmissilephysicalobject.h
src/ogorientworker.cpp
src/ogorientworker.h
src/ogphysicalobject.cpp
src/ogphysicalobject.h
src/ogphysics.cpp
src/ogphysics.h
src/ogplayerphysicalobject.cpp
src/ogplayerphysicalobject.h
src/ogprocedureanimation.cpp
src/ogprocedureanimation.h
src/ogscenegraph.cpp
src/ogscenegraph.h
src/ogsgeffectnode.cpp
src/ogsgeffectnode.h
src/ogsglandscapenode.cpp
src/ogsglandscapenode.h
src/ogsgnode.cpp
src/ogsgnode.h
src/ogspritepool.cpp
src/ogspritepool.h
src/ogstabilizeworker.cpp
src/ogstabilizeworker.h
src/ogstaticphysicalobject.cpp
src/ogstaticphysicalobject.h
src/ogweapon.cpp
src/ogweapon.h
src/ogworker.cpp
src/ogworker.h
src/StartMenuScreenController.cpp
src/StartMenuScreenController.h
)

set(GAME_INCLUDE
include/Game.h
include/IOGActor.h
include/IOGActorManager.h
include/IOGActorParams.h
include/IOGActorParamsManager.h
include/IOGAppSettings.h
include/IOGCollisionListener.h
include/IOGGameEventsHandler.h
include/IOGGameSequence.h
include/IOGGuiBonusbar.h
include/IOGGuiButton.h
include/IOGGuiLifebar.h
include/IOGGuiWeaponPanel.h
include/IOGLevel.h
include/IOGLevelManager.h
include/IOGPhysicalObject.h
include/IOGPhysicalParams.h
include/IOGPhysics.h
include/IOGSceneGraph.h
include/IOGSgNode.h
include/IOGSpritePool.h
include/IOGWeapon.h
)

add_library(Game
    ${GAME_SRC}
    ${GAME_INCLUDE}
)

target_include_directories(Game 
    PUBLIC include
    )

target_link_libraries(Game Engine)

target_compile_definitions(Game PRIVATE
                -D_CRT_SECURE_NO_WARNINGS
                -D_UNICODE
)
